# csr-example-building-UIs-with-leptos

./: .gitignore  Cargo.toml  README.md  index.html  leptosfmt.toml  rustfmt.toml  spin.toml
.devcontainer/: Dockerfile.dev  devcontainer.json
.github/workflows/: spin_deploy.yml  spin_preview.yml
api/: Cargo.toml
api/src/: lib.rs
api_contact/: Cargo.toml
api_contact/src/: lib.rs
public/: styles.css
src/: lib.rs  main.rs
src/components/: get_msg.rs  incr_button.rs  mod.rs  modal.rs  modal_form.rs  modal_w_form.rs  portal.rs  select_dropdown.rs
src/pages/: contact.rs  examples.rs  home.rs  mod.rs  not_found.rs
