[package]
name = "csr-tutorial"
version = "0.1.0"
edition = "2021"
authors = ["Diversable <dan.mantei@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# leptos = { version = "0.5", features = ["csr", "nightly"] }
leptos = { git = "https://github.com/leptos-rs/leptos/", tag = "v0.5.7", features = [
	"csr",
	"nightly",
] }
# leptos_meta = { version = "0.5", features = ["csr", "nightly"] }
leptos_meta = { git = "https://github.com/leptos-rs/leptos/", tag = "v0.5.7", features = [
	"csr",
	"nightly",
] }
# leptos_router = { version = "0.5", features = ["csr", "nightly"] }
leptos_router = { git = "https://github.com/leptos-rs/leptos/", tag = "v0.5.7", features = [
	"csr",
	"nightly",
] }

console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1.7"

# utils
strum = { version = "0.25", features = ["derive", "strum_macros"] }
strum_macros = "0.25"


[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
