[package]
name = "api-contact"
authors = ["Diversable <dan.mantei@outlook.com>"]
description = "POST target for submitting contact form"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v2.1.0" }

[workspace]
