[package]
name = "api-contact"
authors = ["Diversable <dan.mantei@outlook.com>"]
description = "POST target for submitting contact form"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
serde_qs = "0.12.0"
serde_with = "3.5.1"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v2.1.0" }

[workspace]
